# comcan-ctx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
comcan/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  context_budget.py  expertise_manager.py  file_parser.py  git_utils.py  security.py  state_manager.py
comcan/templates/: antigravity_skill.md  comcan-skill.md  comcan.mdc  cursorrules.md  post-checkout  post-commit
tests/: test_context_budget.py  test_expertise.py  test_security.py
